[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbi"
description = "Simulation-based inference."
authors = [
    { name = "sbi-dev", email = "simulation.based.inference@gmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Adaptive Technologies",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
]
requires-python = ">=3.10"
dynamic = ["version"]
readme = "README.md"
keywords = ["Bayesian inference", "simulation-based inference", "PyTorch"]
dependencies = [
    "joblib>=1.0.0",
    "matplotlib",
    "numpy",
    "pillow",
    "nflows>=0.14.0",
    "pymc>=5.0.0",
    "pyro-ppl>=1.3.1",
    "scikit-learn",
    "scipy",
    "skorch",
    "tensorboard",
    "torch>=1.13.0", # Restriction yahan se handle hoti hai
    "tqdm",
    "zuko>=1.2.0",
]

[project.optional-dependencies]
notebook = ["notebook<=6.4.12"]
doc = [
    "sbi[notebook]",
    "ipython <= 8.9.0",
    "jupyter_contrib_nbextensions",
    "mike",
    "mkdocs",
    "markdown-include",
    "mkdocs-material",
    "mkdocs-redirects",
    "mkdocstrings[python] >= 0.18",
    "nbconvert",
    "nbformat",
    "traitlets <= 5.9.0",
    "sphinx",
    "sphinx-autobuild",
    "sphinx_autodoc_typehints",
    "sphinx-math-dollar",
    "sphinx-design",
    "myst-nb",
    "jupytext",
    "sphinx-book-theme",
]
dev = [
    "ffmpeg",
    "pre-commit == 4.0.1",
    "pyyaml",
    "pyright",
    "ruff==0.9.0",
    "pytest",
    "pytest-cov",
    "pytest-harvest",
    "pytest-mock",
    "pytest-split",
    "pytest-testmon",
    "pytest-xdist",
    "sbi[notebook]",
    "torchtestcase",
]

[project.urls]
documentation = "https://sbi-dev.github.io/sbi/"
source = "https://github.com/sbi-dev/sbi"
tracker = "https://github.com/sbi-dev/sbi/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sbi*"]
exclude = ["sbi-logs*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "sbi.__version__"}

# Ruff configuration
[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "B", "SIM", "I"]
ignore = ["E731", "B008"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
"test_*.py" = ["F403", "F405"]
"docs/tutorials/*.ipynb" = ["E501", "E402"]

[tool.ruff.format]
exclude = ["*.ipynb"]
preview = true
quote-style = "preserve"

# Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
xfail_strict = true

# Pyright configuration (FIXED VERSION)
[tool.pyright]
include = ["sbi"]
exclude = ["**/__pycache__", ".git", "docs", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
# Manuel's Fix: Faltu ki restrictions hata di gayi hain
# taake Pyright asli bugs ko pakad sake.
reportPrivateImportUsage = false
reportGeneralTypeIssues = false
