[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbi"
description = "Simulation-based inference."
authors = [
    { name = "sbi-dev", email = "simulation.based.inference@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dynamic = ["version"]

keywords = ["Bayesian inference", "simulation-based inference", "PyTorch"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English",
]

dependencies = [
    "joblib>=1.0.0",
    "matplotlib>=3.6",
    "numpy>=1.23,<3.0",
    "pillow>=9.0",
    "nflows>=0.14.0",
    "pymc>=5.0.0",
    "pyro-ppl>=1.3.1",
    "scikit-learn>=1.2",
    "scipy>=1.9",
    "skorch>=0.15",
    "tensorboard>=2.12",
    "torch>=1.13.0,<3.0",   # 🔥 safer upper bound
    "tqdm>=4.64",
    "zuko>=1.2.0",
]

[project.optional-dependencies]

notebook = [
    "notebook<=6.4.12",
]

doc = [
    "sbi[notebook]",
    "ipython<=8.9.0",
    "jupyter_contrib_nbextensions",
    "mike",
    "mkdocs>=1.4",
    "markdown-include",
    "mkdocs-material",
    "mkdocs-redirects",
    "mkdocstrings[python]>=0.18",
    "nbconvert",
    "nbformat",
    "traitlets<=5.9.0",
    "sphinx",
    "sphinx-autobuild",
    "sphinx_autodoc_typehints",
    "sphinx-math-dollar",
    "sphinx-design",
    "myst-nb",
    "jupytext",
    "sphinx-book-theme",
]

dev = [
    "ffmpeg",
    "pre-commit==4.0.1",
    "pyyaml",
    "pyright>=1.1.350",
    "ruff>=0.9.0",
    "pytest>=7.0",
    "pytest-cov",
    "pytest-harvest",
    "pytest-mock",
    "pytest-split",
    "pytest-testmon",
    "pytest-xdist",
    "torchtestcase",
    "sbi[notebook]",
]

[project.urls]
documentation = "https://sbi-dev.github.io/sbi/"
source = "https://github.com/sbi-dev/sbi"
tracker = "https://github.com/sbi-dev/sbi/issues"

# -------------------------
# Setuptools
# -------------------------

[tool.setuptools.packages.find]
where = ["."]
include = ["sbi*"]
exclude = ["sbi-logs*"]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "sbi.__version__" }

# -------------------------
# Ruff
# -------------------------

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "B", "SIM", "I"]
ignore = ["E731", "B008"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
"test_*.py" = ["F403", "F405"]
"docs/**/*.ipynb" = ["E501", "E402"]

[tool.ruff.lint.isort]
case-sensitive = true
lines-between-types = 0
relative-imports-order = "furthest-to-closest"
known-first-party = ["sbi"]

[tool.ruff.format]
exclude = ["*.ipynb"]
preview = true
quote-style = "preserve"

# -------------------------
# Pytest
# -------------------------

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
xfail_strict = true

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

markers = [
    "slow: slow tests",
    "gpu: gpu tests",
    "mcmc: mcmc tests",
    "benchmark: benchmarking tests",
]

# -------------------------
# Pyright (Improved Safer Version)
# -------------------------

[tool.pyright]
include = ["sbi"]
exclude = ["**/__pycache__", ".git", "docs", "tests"]

pythonVersion = "3.10"
typeCheckingMode = "basic"

# Only disable absolutely necessary torch issues
reportUnsupportedDunderAll = false
reportPrivateImportUsage = false

# Keep these disabled due to torch stubs
reportOperatorIssue = false
reportArgumentType = false
reportCallIssue = false
reportAttributeAccessIssue = false

# Keep these ENABLED for better quality
reportReturnType = true
reportIndexIssue = true
reportOptionalOperand = true
